--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/shadow_up_light.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/shadow_up_light.xml
@@ -3,8 +3,8 @@
        android:shape="rectangle" >
 
     <gradient
-        android:startColor="#4000"
-        android:endColor="#0000"
+        android:startColor="#50000000"
+        android:endColor="#00000000"
         android:type="linear"
         android:angle="90"/>
 
