--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -64,33 +64,6 @@
                     android:visibility="gone"
                     />
 
-                <RelativeLayout
-                    android:id="@+id/relativeLayoutCall1"
-                    android:layout_width="240px"
-                    android:layout_height="56px"
-                    android:layout_marginRight="28px"
-                    android:layout_centerVertical="true"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:id="@+id/driverCallIcon1"
-                        android:layout_width="24px"
-                        android:layout_height="24px"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="15px"
-                        android:src="@drawable/call_icon"/>
-
-                    <!--<product.clicklabs.jugnoo.driver.utils.CustomTextVeiw-->
-                        <!--android:id="@+id/textViewCall1"-->
-                        <!--android:layout_width="110px"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_centerVertical="true"-->
-                        <!--android:layout_marginLeft="65px"-->
-                        <!--android:text="@string/call"-->
-                        <!--android:textColor="@color/jet_black"-->
-                        <!--android:textSize="28px"/>-->
-                </RelativeLayout>
-
             </RelativeLayout>
 
 
@@ -107,7 +80,7 @@
                     android:id="@+id/recyclerViewCustomersLinked"
                     android:layout_width="720px"
                     android:layout_height="80px"
-                    >
+                    android:visibility="gone">
                 </android.support.v7.widget.RecyclerView>
 
                 <include layout="@layout/layout_customer_info"/>
@@ -262,8 +235,7 @@
         android:background="@drawable/transparent"
         android:layout_alignParentBottom="true"
         android:gravity="bottom"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
 
 
@@ -325,24 +297,28 @@
 
 
 
+            <LinearLayout
+                android:id="@+id/linearLayoutDeliveryItem"
+                android:layout_width="720px"
+                android:layout_height="375px"
+                android:background="@color/transparent"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/customerInfoLine4"
+                    android:layout_width="match_parent"
+                    android:layout_height="40px"
+                    android:layout_below="@+id/inRideCustomerInfoRl"
+                    android:background="@drawable/shadow_up_light"/>
                 <LinearLayout
-                    android:id="@+id/linearLayoutDeliveryItem"
                     android:layout_width="720px"
                     android:layout_height="335px"
-                    android:background="@color/grey_light_delivery_tab_fill"
+                    android:background="@color/white"
                     android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/customerInfoLine4"
-                        android:layout_width="match_parent"
-                        android:layout_height="6px"
-                        android:layout_below="@+id/inRideCustomerInfoRl"
-                        android:background="@drawable/shadow_up_light"/>
 
                     <RelativeLayout
                         android:id="@+id/linearLayoutDeliveryItemHeader"
                         android:layout_width="match_parent"
-                        android:layout_height="91px"
+                        android:layout_height="95px"
                         android:background="@color/white">
 
                         <TextView
@@ -361,7 +337,7 @@
                             android:layout_width="226px"
                             android:layout_height="74px"
                             android:layout_marginRight="25px"
-                            android:layout_marginTop="8px"
+                            android:layout_centerVertical="true"
                             android:layout_alignParentRight="true"
                             android:visibility="visible"
                             android:background="@drawable/new_orange_btn_corner_normal">
@@ -385,8 +361,14 @@
                                 android:textSize="38px"/>
                         </RelativeLayout>
 
-
                     </RelativeLayout>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="2px"
+                        android:background="@color/grey_light"
+                        android:layout_marginLeft="30px"
+                        android:layout_marginRight="30px"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -409,7 +391,7 @@
                                 android:textSize="30px"
                                 android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                                 android:textColor="@color/black_text_v2"
-                                />
+                            />
 
                             <TextView
                                 android:id="@+id/textViewCustomerCashRequired"
@@ -486,6 +468,8 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+            </LinearLayout>
 
 
         </RelativeLayout>
@@ -859,7 +843,6 @@
         android:layout_height="110px"
         android:layout_above="@+id/linearLayoutStartEnd"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="20px"
         android:layout_marginRight="38px"
         android:background="@drawable/new_navigate_button_selector"
         android:tag="mwar"
@@ -871,16 +854,16 @@
 
     <RelativeLayout
         android:id="@+id/rlChatDriver"
-        android:layout_width="149px"
-        android:layout_height="149px"
+        android:layout_width="129px"
+        android:layout_height="129px"
         android:layout_marginLeft="12px"
         android:layout_above="@+id/linearLayoutStartEnd"
         android:visibility="visible">
 
         <Button
             android:id="@+id/btnChatHead"
-            android:layout_width="144px"
-            android:layout_height="144px"
+            android:layout_width="124px"
+            android:layout_height="124px"
             android:background="@drawable/chat_icon_eng"/>
 
         <TextView
@@ -888,18 +871,15 @@
             android:layout_width="35px"
             android:layout_height="35px"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="16px"
-            android:layout_marginTop="16px"
+            android:layout_marginRight="10px"
+            android:layout_marginTop="10px"
             android:text="3"
             android:textColor="@color/theme_color"
             android:textSize="@dimen/text_size_24"
             android:gravity="center"
-            android:visibility="gone"
+            android:visibility="visible"
             android:background="@drawable/circle_white_stroke_theme"/>
 
     </RelativeLayout>
-
-
-
 
 </RelativeLayout>
