--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -179,9 +179,10 @@
             <ListView
                 android:id="@+id/driverRideRequestsList"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/topRlOuter"
                 android:divider="@color/transparent"
+                android:background="@color/black_translucent"
                 android:splitMotionEvents="false"
                 android:visibility="gone"
                 />
