--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_white_rounded_orange_bordered"
+        android:background="@drawable/background_white_rounded_bordered"
         android:orientation="vertical"
         android:padding="20px"
         android:splitMotionEvents="false">
@@ -137,7 +137,7 @@
 
 
             <RelativeLayout
-                android:id="@+id/driverRideTimeRl"
+                android:id="@+id/relativeLayoutDriverCOD"
                 android:layout_width="0px"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -261,7 +261,7 @@
             <ImageView
                 android:id="@+id/imageViewDeliveryList"
                 android:layout_width="33px"
-                android:layout_height="84px"
+                android:layout_height="81px"
                 android:layout_marginTop="12px"
                 android:background="@drawable/dropoff_1"
                 android:layout_marginLeft="70px"/>
@@ -285,30 +285,30 @@
                 <TextView
                     android:id="@+id/textViewDropPoint1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="64px"
                     android:layout_marginTop="21px"
-                    android:maxLines="1"
-                    android:text="@string/drop_points"
+                    android:maxLines="2"
+                    android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                     android:textSize="26px"/>
 
                 <TextView
                     android:id="@+id/textViewDropPoint2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="64px"
                     android:layout_marginTop="21px"
-                    android:maxLines="1"
+                    android:maxLines="2"
                     android:visibility="gone"
-                    android:text="@string/drop_points"
+                    android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                     android:textSize="26px"/>
 
                 <TextView
                     android:id="@+id/textViewDropPoint3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="64px"
                     android:layout_marginTop="21px"
-                    android:maxLines="1"
+                    android:maxLines="2"
                     android:visibility="gone"
-                    android:text="@string/drop_points"
+                    android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                     android:textSize="26px"/>
 
             </LinearLayout>
