--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/orange_btn_round_normal.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/orange_btn_round_normal.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     
-    <solid android:color="@color/orange_btn"/>
+    <solid android:color="@color/red_v2"/>
     <corners android:radius="45px"/>
 
 </shape>
