--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list_inride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list_inride.xml
@@ -112,8 +112,43 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/relativeLayoutMerchantDetails"
         android:fadeScrollbars="true"
+        android:layout_above="@+id/linearLayoutbuttons"
         android:scrollbars="vertical"
         android:splitMotionEvents="false">
     </android.support.v7.widget.RecyclerView>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutbuttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="30px"
+        android:layout_marginRight="30px"
+        android:layout_marginBottom="12px"
+        android:gravity="center">
+
+        <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+            android:id="@+id/driverStartRideBtn"
+            android:layout_width="308px"
+            android:layout_height="74px"
+            android:background="@drawable/new_orange_btn_normal_rounded"
+            android:text="@string/start_ride"
+            android:visibility="visible"
+            android:textColor="@drawable/white_color_selector"
+            android:textSize="38px"/>
+
+        <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+            android:id="@+id/driverCancelRideBtn"
+            android:layout_width="308px"
+            android:layout_height="74px"
+            android:layout_marginLeft="35px"
+            android:visibility="visible"
+            android:background="@drawable/new_menu_black_btn_selector_rounded"
+            android:text="@string/cancel"
+            android:textColor="@drawable/white_color_selector"
+            android:textSize="38px"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
