--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_customer_detail.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_customer_detail.xml
@@ -82,6 +82,21 @@
                     android:layout_toRightOf="@+id/imageViewDote1"
                     android:text="@string/NA"/>
 
+                <LinearLayout
+                    android:id="@+id/linearLayoutProgress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10px"
+                    android:layout_marginBottom="20px"
+                    android:layout_marginLeft="40px"
+                    android:layout_marginRight="40px"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                >
+
+
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:id="@+id/linearLayoutSelection1"
