--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/cvTask"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@android:color/transparent"
     card_view:cardUseCompatPadding="true">
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/linearLayoutDeliveryItem"
         android:layout_width="match_parent"
-        android:layout_height="360px"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical">
 
@@ -87,6 +87,7 @@
         </RelativeLayout>
 
         <ImageView
+            android:id="@+id/imageViewSeprator"
             android:layout_width="match_parent"
             android:layout_height="2px"
             android:background="@color/grey_light"
@@ -94,6 +95,7 @@
             android:layout_marginRight="30px"/>
 
         <LinearLayout
+            android:id="@+id/linearLayoutDeliveryData"
             android:layout_width="match_parent"
             android:layout_height="174px"
             android:orientation="horizontal"
@@ -133,13 +135,64 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayoutProgress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44px"
+            android:layout_marginBottom="12px"
+            android:layout_marginLeft="78px"
+            android:layout_marginRight="40px"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:gravity="center_vertical">
+
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativelayoutProgressInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginBottom="15px">
+
+            <ImageView
+                android:id="@+id/imageViewDelNum"
+                android:layout_width="146px"
+                android:layout_height="42px"
+                android:src="@drawable/icon_timeline_pin"/>
+
+            <TextView
+                android:id="@+id/textViewDeliveryText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/about"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="10px"
+                android:textColor="@color/white"/>
+
+        </RelativeLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="30px"
             android:layout_marginRight="30px"
+            android:layout_marginBottom="15px"
             android:gravity="center"
             >
+
+            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+                android:id="@+id/buttonMarkFailed"
+                android:layout_width="300px"
+                android:layout_height="72px"
+                android:visibility="visible"
+                android:background="@drawable/new_menu_black_btn_selector_rounded"
+                android:text="@string/fail"
+                android:textColor="@drawable/white_color_selector"
+                android:textSize="36px"/>
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/buttonMarkDeliver"
@@ -147,6 +200,7 @@
                 android:layout_height="72px"
                 android:background="@drawable/new_orange_btn_normal_rounded"
                 android:text="@string/deliver"
+                android:layout_marginLeft="44px"
                 android:visibility="visible"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"/>
@@ -162,16 +216,7 @@
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"/>
 
-            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                android:id="@+id/buttonMarkFailed"
-                android:layout_width="300px"
-                android:layout_height="72px"
-                android:layout_marginLeft="44px"
-                android:visibility="visible"
-                android:background="@drawable/new_menu_black_btn_selector_rounded"
-                android:text="@string/fail"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="36px"/>
+
 
         </LinearLayout>
 
