--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info_in_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info_in_ride.xml
@@ -75,6 +75,15 @@
             android:text="@string/NA"
             android:textSize="28px"/>
 
+        <ImageView
+            android:id="@+id/bottomLine"
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:background="@color/grey_light"
+            android:layout_marginTop="22px"
+            android:layout_marginLeft="30px"
+            android:layout_marginRight="30px"/>
+
 
     </LinearLayout>
 
