merge_branch_275: UI changes false delivery

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_switch_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_switch_ride.xml
@@ -67,8 +67,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="884px"
+        android:layout_height="match_parent"
         android:layout_below="@+id/topRl"
+        android:layout_marginBottom="10px"
         android:layout_marginTop="32px">
 
         <ImageView
