--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_customer_detail.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_customer_detail.xml
@@ -47,6 +47,7 @@
                     android:layout_width="525px"
                     android:layout_height="wrap_content"
                     android:textSize="32px"
+                    android:visibility="gone"
                     android:layout_marginLeft="48px"
                     android:layout_marginTop="28px"
                     android:layout_toRightOf="@+id/imageViewDote1"
