--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
@@ -1,226 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:id="@+id/cvTask"
+<RelativeLayout
+    android:id="@+id/relativeRoot"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardBackgroundColor="@android:color/transparent"
-    card_view:cardUseCompatPadding="true">
+    android:background="@color/white">
 
-    <LinearLayout
-        android:id="@+id/linearLayoutDeliveryItem"
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cvTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:id="@+id/linearLayoutDeliveryItemHeader"
-            android:layout_width="match_parent"
-            android:layout_height="95px"
-            android:background="@color/white">
-
-            <TextView
-                android:id="@+id/textViewListCount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/NA"
-                android:layout_marginLeft="30px"
-                android:layout_marginTop="6px"
-                android:textSize="26px"
-                android:textColor="@color/black_text_v2"/>
-
-            <TextView
-                android:id="@+id/textViewCustomerName"
-                android:layout_width="410px"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30px"
-                android:layout_centerVertical="true"
-                android:layout_below="@+id/textViewListCount"
-                android:text="@string/NA"
-                android:textSize="32px"
-                android:visibility="visible"
-                android:textColor="@color/black_text_v2"/>
-
-            <TextView
-                android:id="@+id/textViewReturnText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/NA"
-                android:gravity="center"
-                android:textSize="32px"
-                android:visibility="gone"
-                android:textColor="@color/black_text_v2"/>
-
-
-            <RelativeLayout
-                android:id="@+id/relativeLayoutCall"
-                android:layout_width="220px"
-                android:layout_height="72px"
-                android:layout_marginRight="36px"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:visibility="visible"
-                android:background="@drawable/new_orange_btn_corner_normal">
-
-                <ImageView
-                    android:id="@+id/driverCallIcon"
-                    android:layout_width="40px"
-                    android:layout_height="40px"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15px"
-                    android:src="@drawable/call_icon_selector"/>
-
-                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                    android:id="@+id/textViewCall"
-                    android:layout_width="130px"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="95px"
-                    android:text="@string/call"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="42px"/>
-            </RelativeLayout>
-
-        </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/imageViewSeprator"
-            android:layout_width="match_parent"
-            android:layout_height="2px"
-            android:background="@color/grey_light"
-            android:layout_marginLeft="30px"
-            android:layout_marginRight="30px"/>
+        card_view:cardBackgroundColor="@android:color/transparent"
+        card_view:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:id="@+id/linearLayoutDeliveryData"
+            android:id="@+id/linearLayoutDeliveryItem"
             android:layout_width="match_parent"
-            android:layout_height="174px"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/linearLayoutDeliveryItemHeader"
+                android:layout_width="match_parent"
+                android:layout_height="95px"
+                android:background="@color/white">
+
+                <TextView
+                    android:id="@+id/textViewListCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30px"
+                    android:layout_marginTop="6px"
+                    android:text="@string/NA"
+                    android:textColor="@color/black_text_v2"
+                    android:textSize="26px"/>
+
+                <TextView
+                    android:id="@+id/textViewCustomerName"
+                    android:layout_width="410px"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewListCount"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="30px"
+                    android:text="@string/NA"
+                    android:textColor="@color/black_text_v2"
+                    android:textSize="32px"
+                    android:visibility="visible"/>
+
+                <TextView
+                    android:id="@+id/textViewReturnText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:text="@string/NA"
+                    android:textColor="@color/black_text_v2"
+                    android:textSize="32px"
+                    android:visibility="gone"/>
+
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayoutCall"
+                    android:layout_width="220px"
+                    android:layout_height="72px"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="36px"
+                    android:background="@drawable/new_orange_btn_corner_normal"
+                    android:visibility="visible">
+
+                    <ImageView
+                        android:id="@+id/driverCallIcon"
+                        android:layout_width="40px"
+                        android:layout_height="40px"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15px"
+                        android:src="@drawable/call_icon_selector"/>
+
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewCall"
+                        android:layout_width="130px"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="95px"
+                        android:text="@string/call"
+                        android:textColor="@drawable/white_color_selector"
+                        android:textSize="42px"/>
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/imageViewSeprator"
+                android:layout_width="match_parent"
+                android:layout_height="2px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="30px"
+                android:background="@color/grey_light"/>
 
             <LinearLayout
-                android:id="@+id/linearLayoutContent"
-                android:layout_width="wrap_content"
+                android:id="@+id/linearLayoutDeliveryData"
+                android:layout_width="match_parent"
+                android:layout_height="174px"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/linearLayoutContent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewCustomerDeliveryAddress"
+                        android:layout_width="592px"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30px"
+                        android:maxLines="3"
+                        android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
+                        android:textColor="@color/black_text_v2"
+                        android:textSize="30px"
+                    />
+
+                    <TextView
+                        android:id="@+id/textViewCashCollected"
+                        android:layout_width="592px"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30px"
+                        android:layout_marginTop="12px"
+                        android:text="lllllllllllllllllllllllllllllllllllllll"
+                        android:textColor="@color/black_text_v2"
+                        android:textSize="30px"
+                        android:visibility="visible"
+                    />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayoutProgress"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="12px"
+                android:layout_marginLeft="78px"
+                android:layout_marginRight="40px"
+                android:layout_marginTop="44px"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/relativelayoutProgressInfo"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="8px"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15px"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/imageViewDelNum"
+                    android:layout_width="146px"
+                    android:layout_height="42px"
+                    android:src="@drawable/icon_timeline_pin"/>
 
                 <TextView
-                    android:id="@+id/textViewCustomerDeliveryAddress"
-                    android:layout_width="592px"
+                    android:id="@+id/textViewDeliveryText"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30px"
-                    android:maxLines="3"
-                    android:textSize="30px"
-                    android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
-                    android:textColor="@color/black_text_v2"
-                    />
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="10px"
+                    android:gravity="center"
+                    android:text="@string/delivery_1"
+                    android:textColor="@color/white"/>
 
-                <TextView
-                    android:id="@+id/textViewCashCollected"
-                    android:layout_width="592px"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="30px"
-                    android:textSize="30px"
-                    android:layout_marginTop="12px"
-                    android:visibility="visible"
-                    android:text="lllllllllllllllllllllllllllllllllllllll"
-                    android:textColor="@color/black_text_v2"
-                    />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="30px"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="5px"
+            >
+
+                <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+                    android:id="@+id/buttonMarkFailed"
+                    android:layout_width="300px"
+                    android:layout_height="72px"
+                    android:background="@drawable/new_menu_black_btn_selector_rounded"
+                    android:text="@string/fail"
+                    android:textColor="@drawable/white_color_selector"
+                    android:textSize="36px"
+                    android:visibility="visible"/>
+
+                <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+                    android:id="@+id/buttonMarkDeliver"
+                    android:layout_width="300px"
+                    android:layout_height="72px"
+                    android:layout_marginLeft="40px"
+                    android:background="@drawable/new_orange_btn_normal_rounded"
+                    android:text="@string/deliver"
+                    android:textColor="@drawable/white_color_selector"
+                    android:textSize="@dimen/button_text_size"
+                    android:visibility="visible"/>
+
+                <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+                    android:id="@+id/buttonMarkReturn"
+                    android:layout_width="300px"
+                    android:layout_height="72px"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/new_orange_btn_corner_normal"
+                    android:text="@string/returned"
+                    android:textColor="@drawable/white_color_selector"
+                    android:textSize="@dimen/button_text_size"
+                    android:visibility="gone"/>
+
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayoutProgress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="44px"
-            android:layout_marginBottom="12px"
-            android:layout_marginLeft="78px"
-            android:layout_marginRight="40px"
-            android:orientation="horizontal"
-            android:visibility="gone"
-            android:gravity="center_vertical">
+    </android.support.v7.widget.CardView>
 
-
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativelayoutProgressInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_marginBottom="15px">
-
-            <ImageView
-                android:id="@+id/imageViewDelNum"
-                android:layout_width="146px"
-                android:layout_height="42px"
-                android:src="@drawable/icon_timeline_pin"/>
-
-            <TextView
-                android:id="@+id/textViewDeliveryText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/about"
-                android:gravity="center"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="10px"
-                android:textColor="@color/white"/>
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="30px"
-            android:layout_marginRight="30px"
-            android:layout_marginBottom="15px"
-            android:padding="5px"
-            android:gravity="center"
-            >
-
-            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                android:id="@+id/buttonMarkFailed"
-                android:layout_width="300px"
-                android:layout_height="72px"
-                android:visibility="visible"
-                android:background="@drawable/new_menu_black_btn_selector_rounded"
-                android:text="@string/fail"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="36px"/>
-
-            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                android:id="@+id/buttonMarkDeliver"
-                android:layout_width="300px"
-                android:layout_height="72px"
-                android:background="@drawable/new_orange_btn_normal_rounded"
-                android:text="@string/deliver"
-                android:layout_marginLeft="40px"
-                android:visibility="visible"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="@dimen/button_text_size"/>
-
-            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                android:id="@+id/buttonMarkReturn"
-                android:layout_width="300px"
-                android:layout_height="72px"
-                android:background="@drawable/new_orange_btn_corner_normal"
-                android:text="@string/returned"
-                android:visibility="gone"
-                android:layout_centerInParent="true"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="@dimen/button_text_size"/>
-
-
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
