--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
@@ -30,6 +30,36 @@
             android:text="@string/daily_earnings"
             android:textColor="@color/white"
             android:textSize="40px"/>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutCall1"
+            android:layout_width="150px"
+            android:layout_height="50px"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15px"
+            android:visibility="gone"
+            android:layout_centerVertical="true"
+            android:background="@drawable/orange_btn_selector">
+
+            <ImageView
+                android:id="@+id/driverCallIcon"
+                android:layout_width="25px"
+                android:layout_height="25px"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20px"
+                android:src="@drawable/call_icon_selector"/>
+
+            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                android:id="@+id/textViewCall"
+                android:layout_width="130px"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="58px"
+                android:text="@string/call_us"
+                android:textColor="@drawable/white_color_selector"
+                android:textSize="24px"/>
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
