--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ticket_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ticket_history.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/linearLayoutRideItem"
+<LinearLayout android:id="@+id/linearLayoutTicketItem"
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -8,16 +8,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="194px"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical"
         android:orientation="horizontal">
         
         <LinearLayout
             android:layout_width="440px"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40px"
-            android:layout_marginRight="28px"
+            android:layout_marginLeft="35px"
+            android:layout_marginRight="25px"
+            android:layout_marginTop="40px"
+            android:layout_marginBottom="35px"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -47,7 +48,7 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5px">
+                android:layout_marginTop="10px">
 
                 <TextView
                     android:id="@+id/textViewCreatedOnText"
@@ -66,7 +67,6 @@
                     android:textSize="22px"
                     android:text="lllllllllllllllllllllllllllllllllllllllllll"/>
 
-
             </RelativeLayout>
 
 
@@ -83,9 +83,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="165px"
+            android:layout_width="170px"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12px"
+            android:layout_marginRight="24px"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -132,6 +133,7 @@
         <ImageView
             android:layout_width="14px"
             android:layout_height="24px"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/arrow_right_ticket"/>
 
     </LinearLayout>
