bug_fixes: UI fixes and 267 bug fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -19,7 +19,8 @@
             android:id="@+id/relativeLayoutSelectPicture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24px"
+            android:layout_margin="3px"
+            android:background="@drawable/background_white_white_dark_selector"
             android:gravity="center_horizontal">
 
             <TextView
@@ -27,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24px"
+                android:layout_marginLeft="24px"
                 android:text="@string/Document_type"
                 android:textColor="@color/black"
                 android:textSize="36px"
@@ -65,6 +67,7 @@
                 android:layout_below="@+id/docType"
                 android:layout_marginBottom="24px"
                 android:layout_marginTop="32px"
+                android:layout_marginLeft="24px"
                 android:text="@string/Requirement"
                 android:textColor="@color/grey_black_light"
                 android:textSize="24px"
