--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -99,14 +99,21 @@
         android:id="@+id/relativeLayoutJugnooLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140px"
+        android:animateLayoutChanges="true"
         android:splitMotionEvents="false">
+
+        <ImageView
+            android:id="@+id/viewInitLogoMargin"
+            android:layout_width="match_parent"
+            android:layout_height="140px"
+            android:visibility="visible"/>
 
         <ImageView
             android:id="@+id/imageViewJugnooLogo"
             android:layout_width="250px"
             android:layout_height="264px"
             android:layout_centerHorizontal="true"
+            android:layout_below="@+id/viewInitLogoMargin"
             android:background="@drawable/new_jugnoo_spalsh_logo"
             android:tag="mwar"
             android:visibility="visible"/>
