bug_fixes: UI visibility made server controlled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_resources.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_resources.xml
@@ -130,6 +130,53 @@
             android:layout_marginTop="36px"
             android:background="@color/grey_light"/>
 
+        <LinearLayout
+            android:id="@+id/linearLayoutSupport"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/topRl"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20px"
+            android:layout_marginTop="36px"
+            android:background="@drawable/transparent"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15px">
+
+                <TextView
+                    android:id="@+id/textViewSupport"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/support"
+                    android:textColor="@color/bg_grey_opaque"
+                    android:textSize="34px"
+                    android:visibility="visible"/>
+
+                <ImageView
+                    android:layout_width="21px"
+                    android:layout_height="20px"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="36px"
+                    android:src="@drawable/arrow_thick_new"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="700px"
+            android:layout_height="2px"
+            android:layout_below="@+id/linearLayoutResources"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="2px"
+            android:layout_marginTop="36px"
+            android:background="@color/grey_light"/>
+
     </LinearLayout>
 
 </RelativeLayout>
